--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 mkdocs==1.5.3
 mkdocs-material==9.5.13
 pre-commit==3.6.2
+prettytable==3.10.0
 PyGithub==2.2.0
 termynal==0.12.1
 typer[all]==0.9.0
