--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ mkdocs-material==9.5.13
 pre-commit==3.6.2
 prettytable==3.10.0
 PyGithub==2.2.0
+termcolor==2.4.0
 termynal==0.12.1
 typer[all]==0.9.0
