--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,5 +58,6 @@ nav:
       - contribution/contribution-guidelines.md
       - Definition of Done: contribution/definition-of-done.md
       - 12 Factor App Checklist: contribution/12-factor-app-checklist.md
+      - Production Environment Checklist: contributing/production-environment-checklist.md
       - Pre-Commit: contribution/pre-commit.md
       - Code of Conduct: contribution/code-of-conduct.md
