refactor move heroes

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ##################################################################################################
+# Custom
+##################################################################################################
+_cwep
+
+##################################################################################################
 # Begin Python
 ##################################################################################################
 
