--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,6 +92,11 @@ nav:
           - Merge Strategies: playbook/source_control/merge_strategies.md
           - Naming Branches: playbook/source_control/naming_branches.md
           - Secrets Management: playbook/source_control/secrets_management.md
+      - Security:
+          - playbook/security/security.md
+          - Threat Modelling: playbook/security/threat_modelling.md
+          - Threat Modelling Example: playbook/security/threat_modelling_example.md
+          - Rules of Engagement: playbook/security/rules_of_engagement.md
   - Crew Contracts:
       - Crew Manifesto: crew_contracts/crew_manifesto.md
       - Definition of Ready: crew_contracts/definition_of_ready.md
