--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,15 @@ plugins:
       prompt_literal_start:
         - "$"
 
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+
 # Page tree
 nav:
   - Home: index.md
@@ -92,7 +101,6 @@ nav:
               - Recipes:
                   - 'Gauge Framework': 'playbook/automated_testing/e2e_testing/recipes/gauge_framework.md'
                   - 'Postman Testing': 'playbook/automated_testing/e2e_testing/recipes/postman_testing.md'
-                  - 'Recipes': 'playbook/automated_testing/e2e_testing/recipes/recipes.md'
           - 'Fault Injection Testing': 'playbook/automated_testing/fault_injection_testing/fault_injection_testing.md'
           - 'Integration Testing': 'playbook/automated_testing/integration_testing/integration_testing.md'
           - Performance Testing:
@@ -103,21 +111,19 @@ nav:
           - 'Smoke Testing': 'playbook/automated_testing/smoke_testing/smoke_testing.md'
           - 'Synthetic Monitoring Tests': 'playbook/automated_testing/synthetic_monitoring_tests/synthetic_monitoring_tests.md'
           - Tech Specific Samples:
-              - 'Tech Specific Samples': 'playbook/automated_testing/tech_specific_samples/tech_specific_samples.md'
               - 'Azdo Container Dev Test Release': 'playbook/automated_testing/tech_specific_samples/azdo_container_dev_test_release/azdo_container_dev_test_release.md'
               - 'Blobstorage Unit Tests': 'playbook/automated_testing/tech_specific_samples/blobstorage_unit_tests/blobstorage_unit_tests.md'
           - Templates:
               - 'Case Study Template': 'playbook/automated_testing/templates/case_study_template.md'
-              - 'Templates': 'playbook/automated_testing/templates/templates.md'
               - 'Test Type Template': 'playbook/automated_testing/templates/test_type_template.md'
           - 'UI Testing': 'playbook/automated_testing/ui_testing/ui_testing.md'
           - Unit Testing:
+              - 'Why Unit Tests': 'playbook/automated_testing/unit_testing/why_unit_tests.md'
               - 'Authoring Example': 'playbook/automated_testing/unit_testing/authoring_example.md'
               - 'Custom Connector': 'playbook/automated_testing/unit_testing/custom_connector.md'
               - 'Mocking': 'playbook/automated_testing/unit_testing/mocking.md'
               - 'TDD Example': 'playbook/automated_testing/unit_testing/tdd_example.md'
               - 'Unit Testing': 'playbook/automated_testing/unit_testing/unit_testing.md'
-              - 'Why Unit Tests': 'playbook/automated_testing/unit_testing/why_unit_tests.md'
       - Code Reviews:
           - 'Code Reviews': 'playbook/code_reviews/code_reviews.md'
           - 'FAQ': 'playbook/code_reviews/faq.md'
