--- a/.make/docs/Makefile
+++ b/.make/docs/Makefile
@@ -14,7 +14,7 @@
 #--------------------------------------------------------------------------------------------------------------
 # docs serve
 #--------------------------------------------------------------------------------------------------------------
-docs/serve:
+docs/serve: tailwind/compile
 	mkdocs serve
 
 #--------------------------------------------------------------------------------------------------------------
