update hoepage hero

--- a/.make/tailwind/Makefile
+++ b/.make/tailwind/Makefile
@@ -24,7 +24,7 @@
 # tailwind install
 #--------------------------------------------------------------------------------------------------------------
 tailwind/install:
-	npm install tailwindcss postcss autoprefixer
+	npm install
 
 #--------------------------------------------------------------------------------------------------------------
 # tailwind initialize
