--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ markdown_extensions:
       custom_fences:
         - name: mermaid
           class: mermaid
+  - attr_list
 
 extra_css:
   - assets/css/tailwind-output.css
